--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    a = first_neighbor[]"
+    "    a = first_neighbor['avenu']"
    ]
   },
   {
