Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,8 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    a = abs(first_neighbor['avenue'] - second_neighbor['avenue']"
+    "    a = abs(first_neighbor['avenue'] - second_neighbor['avenue']\n",
+    "    b = abs(first_neighbor['avenue'] - second_neighbor['avenue']"
    ]
   },
   {
