--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    a = abs(first_neighbor['avenue'] - second_neighbor['avenue']\n",
-    "    b = abs(first_neighbor['avenue'] - second_neighbor['avenue']"
+    "    b = abs(first_neighbor['street'] - second_neighbor['street']"
    ]
   },
   {
