--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    a = abs(first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    b = abs(first_neighbor['street'] - second_neighbor['street']\n",
-    "    distance = pow(a, 2)"
+    "    distance = sqpow(a, 2) + pow(b, 2)"
    ]
   },
   {
