--- a/index.ipynb
+++ b/index.ipynb
@@ -204,16 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-5e346ff86c64>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-5e346ff86c64>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    b = abs(first_neighbor['street'] - second_neighbor['street']\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    a = abs(first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    b = abs(first_neighbor['street'] - second_neighbor['street']\n",
-    "    distance = sqrt(pow(a, 2) + pow(b, 2))"
+    "    distance = sqrt(pow(a, 2) + pow(b, 2))\n",
+    "    return distance"
    ]
   },
   {
