--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
    "source": [
     "from math import sqrt\n",
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    a = abs(first_neighbor['avenue'] - second_neighbor['avenue'])\n",
+    "    #a = abs(first_neighbor['avenue'] - second_neighbor['avenue'])\n",
     "    b = abs(first_neighbor['street'] - second_neighbor['street'])\n",
     "    distance = sqrt(pow(a, 2) + pow(b, 2))\n",
     "    return distance"
