--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    distance = = abs(first_neighbor['avenue'] - second_neighbor['avenue'])"
    ]
   },
   {
