--- a/index.ipynb
+++ b/index.ipynb
@@ -303,7 +303,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    a = street_distance(first_neighbor, second_neighbor"
+    "    a = street_distance(first_neighbor, second_neighbor)\n",
+    "    b = avenue_distance"
    ]
   },
   {
