Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    a = street_distance(first_neighbor, second_neighbor)\n",
     "    b = avenue_distance(first_neighbor, second_neighbor)\n",
-    "    csquared = p"
+    "    csquared = pow(a,2) + pow(b,2)"
    ]
   },
   {
