--- a/index.ipynb
+++ b/index.ipynb
@@ -296,25 +296,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    a = street_distance(first_neighbor, second_neighbor)\n",
     "    b = avenue_distance(first_neighbor, second_neighbor)\n",
-    "    csquared = pow(a,2) + pow(b,2)"
+    "    csquared = pow(a,2) + pow(b,2)\n",
+    "    return csquared"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_between_neighbors_squared(fred, natalie) # 17"
    ]
