--- a/index.ipynb
+++ b/index.ipynb
@@ -351,7 +351,7 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    distance_between_neighbors_squared"
+    "    csquared =distance_between_neighbors_squared(first_neighbor, second_neighbor)"
    ]
   },
   {
