--- a/index.ipynb
+++ b/index.ipynb
@@ -445,7 +445,8 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    distance"
+    "    distance = distance(first_neighbor, second_neighbor)\n",
+    "    "
    ]
   },
   {
