--- a/index.ipynb
+++ b/index.ipynb
@@ -447,7 +447,8 @@
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distance = distance(first_neighbor, second_neighbor)\n",
     "    second_neighbor_copy = dict(second_neighbor)\n",
-    "    "
+    "    second_neighbor_copy['distance'] = distance\n",
+    "    re"
    ]
   },
   {
