Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    distance = distance(first_neighbor, second_neighbor)\n",
+    "    theirdistance = distance(first_neighbor, second_neighbor)\n",
     "    second_neighbor_copy = dict(second_neighbor)\n",
     "    #second_neighbor_copy['distance'] = distance\n",
     "    return second_neighbor_copy"
