Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -443,9 +443,9 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    theirdistance = distance(first_neighbor, second_neighbor)\n",
+    "    their_distance = distance(first_neighbor, second_neighbor)\n",
     "    second_neighbor_copy = dict(second_neighbor)\n",
-    "    #second_neighbor_copy['distance'] = distance\n",
+    "    second_neighbor_copy['distance'] = their_distance\n",
     "    return second_neighbor_copy"
    ]
   },
