--- a/index.ipynb
+++ b/index.ipynb
@@ -471,6 +471,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
