Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -480,6 +480,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(d, 'new')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
