--- a/index.ipynb
+++ b/index.ipynb
@@ -481,22 +481,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-31-5aae86b643ea>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-5aae86b643ea>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    dict(d, 'new': 'val')\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "dict(d, 'new')"
+    "dict(d, {'new': 'val')"
    ]
   },
   {
