--- a/index.ipynb
+++ b/index.ipynb
@@ -515,7 +515,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    "
+    "    for neighbor in neighbors:\n",
+    "        if "
    ]
   },
   {
