--- a/index.ipynb
+++ b/index.ipynb
@@ -516,7 +516,8 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    for neighbor in neighbors:\n",
-    "        if "
+    "        if first_neighbor == neighbor:\n",
+    "            c"
    ]
   },
   {
