--- a/index.ipynb
+++ b/index.ipynb
@@ -517,7 +517,8 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    for neighbor in neighbors:\n",
     "        if first_neighbor == neighbor:\n",
-    "            c"
+    "            continue\n",
+    "        "
    ]
   },
   {
