Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -515,7 +515,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    \n",
+    "    distance = []\n",
     "    for neighbor in neighbors:\n",
     "        if first_neighbor == neighbor:\n",
     "            continue\n",
