--- a/index.ipynb
+++ b/index.ipynb
@@ -519,7 +519,7 @@
     "    for neighbor in neighbors:\n",
     "        if first_neighbor == neighbor:\n",
     "            continue\n",
-    "        "
+    "        distance.append()"
    ]
   },
   {
