Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -519,7 +519,8 @@
     "    for neighbor in neighbors:\n",
     "        if first_neighbor == neighbor:\n",
     "            continue\n",
-    "        distance.append(distance_with_neighbor(first_neighbor, second_neighbor))"
+    "        distance.append(distance_with_neighbor(first_neighbor, neighbor))\n",
+    "    re"
    ]
   },
   {
