--- a/index.ipynb
+++ b/index.ipynb
@@ -567,7 +567,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    pass"
+    "    didistance_all(first_neighbor, neighbors)"
    ]
   },
   {
