--- a/index.ipynb
+++ b/index.ipynb
@@ -567,7 +567,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    didistance_all(first_neighbor, neighbors)"
+    "    distances = distance_all(first_neighbor, neighbors)\n",
+    "    "
    ]
   },
   {
