--- a/index.ipynb
+++ b/index.ipynb
@@ -568,7 +568,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distances = distance_all(first_neighbor, neighbors)\n",
-    "    sorted(distances, )"
+    "    sorted(distances, key='distance')"
    ]
   },
   {
