Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -569,7 +569,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distances = distance_all(first_neighbor, neighbors)\n",
     "    distances = sorted(distances, key='distance')\n",
-    "    return distances[]"
+    "    return distances[0: number+1] "
    ]
   },
   {
