Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -566,7 +566,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distances = distance_all(first_neighbor, neighbors)\n",
-    "    distances = sorted(distances, key='distance')\n",
+    "    distances = sorted(distances, key=la'distance')\n",
     "    return distances[0: number+1] if number else distances"
    ]
   },
